documentation/3.0.0/model.dateLike.md
---
layout: oldGuidelines
---
<article class="page type-page status-publish hentry">
   <div class="entry-content">
      <div class="panel-grid">
         <div class="panel-grid-cell" style="width: 65%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <div class="textwidget">
                  <div class="classSpec model">
                     <h3 id="model.dateLike">model.dateLike</h3>
                     <table class="wovenodd">
                        <tr>
                           <td colspan="2" class="wovenodd-col2">
                              <span class="label">model.dateLike</span> Groups elements containing date expressions.
                           </td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Module</span>
                           </td>
                           <td class="wovenodd-col2">MEI.shared</td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Available in</span>
                           </td>
                           <td class="wovenodd-col2">
                              <div class="parent">
                                 <div>
                                    <a class="link_odd_classSpec" href="/documentation/3.0.0/model.textphraseLike.limited">model.textphraseLike.limited</a>, 
                                    <a class="link_odd_classSpec" href="/documentation/3.0.0/model.pubStmtPart">model.pubStmtPart</a>, 
                                    <a class="link_odd_classSpec" href="/documentation/3.0.0/model.eventPart">model.eventPart</a>, 
                                    <a class="link_odd_classSpec" href="/documentation/3.0.0/model.titlePagePart">model.titlePagePart</a>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/change">change</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/eventList">eventList</a>
                                 </div>
                              </div>
                           </td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Members</span>
                           </td>
                           <td class="wovenodd-col2">
                              <div class="parent">
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/date">date</a> (direct member of model.dateLike)
                                 </div>
                              </div>
                           </td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Declaration</span>
                           </td>
                           <td class="wovenodd-col2">
                              <div xml:space="preserve" class="pre">
                                 <div class="indent1">
                                    <span data-indentation="1" class="element">&lt;classes&gt;</span>
                                    
                                    <div class="indent2">
                                       <span data-indentation="2" class="element">&lt;memberOf 
                                          <span class="attribute">key=</span>
                                          <span class="attributevalue">"
                                             <a class="link_odd" href="/documentation/3.0.0/model.textphraseLike.limited">model.textphraseLike.limited</a>"
                                          </span>/&gt;
                                       </span>
                                    </div>
                                    
                                    <div class="indent2">
                                       <span data-indentation="2" class="element">&lt;memberOf 
                                          <span class="attribute">key=</span>
                                          <span class="attributevalue">"
                                             <a class="link_odd" href="/documentation/3.0.0/model.pubStmtPart">model.pubStmtPart</a>"
                                          </span>/&gt;
                                       </span>
                                    </div>
                                    
                                    <div class="indent2">
                                       <span data-indentation="2" class="element">&lt;memberOf 
                                          <span class="attribute">key=</span>
                                          <span class="attributevalue">"
                                             <a class="link_odd" href="/documentation/3.0.0/model.eventPart">model.eventPart</a>"
                                          </span>/&gt;
                                       </span>
                                    </div>
                                    
                                    <div class="indent2">
                                       <span data-indentation="2" class="element">&lt;memberOf 
                                          <span class="attribute">key=</span>
                                          <span class="attributevalue">"
                                             <a class="link_odd" href="/documentation/3.0.0/model.titlePagePart">model.titlePagePart</a>"
                                          </span>/&gt;
                                       </span>
                                    </div>
                                    
                                    <span data-indentation="1" class="element">&lt;/classes&gt;</span>
                                 </div>
                              </div>
                           </td>
                        </tr>
                     </table>
                  </div>
               </div>
            </div>
         </div>
         <div class="panel-grid-cell" style="width: 35%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <header class="entry-header">
                  <h1 class="entry-title">
                     MEI Guidelines 
                     <small>Version 3.0.0</small>
                  </h1>
               </header>
               <div class="textwidget">
                  <ul class="guidelinesList">
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/chapters">MEI Guidelines</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/elements">Elements</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/atts">Attributes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/models">Model Classes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/data">Data Types</a>
                     </li>
                  </ul>
               </div>
               <div style="margin: 10px 30px; border-bottom: 0.5px solid #666666; height: 1px;"></div>
               <h3 class="widget-title">Model Classes</h3>
               <div class="textwidget">
                  <ul class="guidelinesList">
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.addressLike">model.addressLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.addressPart">model.addressPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.annotLike">model.annotLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.appLike">model.appLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec b" href="/documentation/3.0.0/model.backLike">model.backLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec b" href="/documentation/3.0.0/model.biblLike">model.biblLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec b" href="/documentation/3.0.0/model.biblPart">model.biblPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.captionLike">model.captionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.choicePart">model.choicePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.chordPart">model.chordPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.chordTableLike">model.chordTableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.controleventLike">model.controleventLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.controleventLike.cmn">model.controleventLike.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.controleventLike.harmony">model.controleventLike.harmony</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.dateLike">model.dateLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.descLike">model.descLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.dimLike">model.dimLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.divLike">model.divLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editLike">model.editLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editionLike">model.editionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editorialDeclPart">model.editorialDeclPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editorialLike">model.editorialLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.encodingPart">model.encodingPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.endingLike">model.endingLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike">model.eventLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.cmn">model.eventLike.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.measureFilling">model.eventLike.measureFilling</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.mensural">model.eventLike.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.neumes">model.eventLike.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventPart">model.eventPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.expressionLike">model.expressionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.fLike">model.fLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.figDescLike">model.figDescLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.figbassLike">model.figbassLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.figureLike">model.figureLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.fingeringLike">model.fingeringLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.frontLike">model.frontLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.frontPart">model.frontPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec g" href="/documentation/3.0.0/model.geogNamePart">model.geogNamePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec g" href="/documentation/3.0.0/model.graphicLike">model.graphicLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec g" href="/documentation/3.0.0/model.graphicprimitiveLike">model.graphicprimitiveLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec h" href="/documentation/3.0.0/model.harmLike">model.harmLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec h" href="/documentation/3.0.0/model.headLike">model.headLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec h" href="/documentation/3.0.0/model.headerPart">model.headerPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.identifierLike">model.identifierLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.imprintPart">model.imprintPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.incipLike">model.incipLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.instrDefLike">model.instrDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.itemLike">model.itemLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec k" href="/documentation/3.0.0/model.keyAccidLike">model.keyAccidLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec k" href="/documentation/3.0.0/model.keySigLike">model.keySigLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lLike">model.lLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.labelLike">model.labelLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerDefLike">model.layerDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerLike">model.layerLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart">model.layerPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.cmn">model.layerPart.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.mensural">model.layerPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.mensuralAndNeumes">model.layerPart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.neumes">model.layerPart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lbLike">model.lbLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lgLike">model.lgLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.listLike">model.listLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.locrefLike">model.locrefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lyricsLike">model.lyricsLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.manifestationLike">model.manifestationLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.mdivLike">model.mdivLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.measureLike">model.measureLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.measurePart">model.measurePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.measurementLike">model.measurementLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.meterSigLike">model.meterSigLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.midiLike">model.midiLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.milestoneLike.music">model.milestoneLike.music</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.milestoneLike.text">model.milestoneLike.text</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike">model.nameLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.agent">model.nameLike.agent</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.geogName">model.nameLike.geogName</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.label">model.nameLike.label</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.place">model.nameLike.place</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.noteModifierLike">model.noteModifierLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.numLike">model.numLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec o" href="/documentation/3.0.0/model.ornamentLike.cmn">model.ornamentLike.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec o" href="/documentation/3.0.0/model.ossiaLike">model.ossiaLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.pLike">model.pLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.paracontentPart">model.paracontentPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.partLike">model.partLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.partsLike">model.partsLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.pbLike">model.pbLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.persNamePart">model.persNamePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.physDescPart">model.physDescPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.pubStmtPart">model.pubStmtPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec q" href="/documentation/3.0.0/model.quoteLike">model.quoteLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.rdgPart.critapp">model.rdgPart.critapp</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.rdgPart.text">model.rdgPart.text</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.relationLike">model.relationLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.rendLike">model.rendLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.repositoryLike">model.repositoryLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.resourceLike">model.resourceLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.respLike">model.respLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.respLikePart">model.respLikePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scoreDefLike">model.scoreDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scoreLike">model.scoreLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart">model.scorePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart.mensural">model.scorePart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart.mensuralAndNeumes">model.scorePart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart.neumes">model.scorePart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionLike">model.sectionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart">model.sectionPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.cmn">model.sectionPart.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.mensural">model.sectionPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.mensuralAndNeumes">model.sectionPart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.neumes">model.sectionPart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffDefLike">model.staffDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffDefPart">model.staffDefPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffDefPart.mensural">model.staffDefPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffGrpLike">model.staffGrpLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffLike">model.staffLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart">model.staffPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart.mensural">model.staffPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart.mensuralAndNeumes">model.staffPart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart.neumes">model.staffPart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.startLike.corpus">model.startLike.corpus</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.startLike.header">model.startLike.header</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sylLike">model.sylLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.syllableLike">model.syllableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.syllablePart">model.syllablePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.symbolTableLike">model.symbolTableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.tableLike">model.tableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.textcomponentLike">model.textcomponentLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.textphraseLike">model.textphraseLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.textphraseLike.limited">model.textphraseLike.limited</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.titleLike">model.titleLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.titlePagePart">model.titlePagePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.transcriptionLike">model.transcriptionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec v" href="/documentation/3.0.0/model.verseLike">model.verseLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec w" href="/documentation/3.0.0/model.workIdent">model.workIdent</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec w" href="/documentation/3.0.0/model.workLike">model.workLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                  </ul>
               </div>
            </div>
         </div>
      </div>
   </div>
</article>